skills done, need to fix alignment of hero section

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,8 @@
+@import "variables";
+
 .app {
-  position: relative;
-  margin-top: 2rem;
+  padding: 0 1.6rem;
+  width: 100vw;
+  min-width: 320px;
+  max-width: 1200px;
 }
