--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -6,7 +6,7 @@ $color-font: #fff;
 $color-gray: #d9d9d9;
 
 //Screens
-$screen-small: 320px;
+$screen-small: 600px;
 $screen-medium: 768px;
 $screen-big: 1024px;
 
@@ -19,16 +19,6 @@ $screen-big: 1024px;
 
 @mixin image($path) {
   background-image: url("#{$path}");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-@mixin bg-image($paths...) {
-  $background-images: "";
-  @each $path in $paths {
-    $background-images: $background-images + "url('#{$path}'),";
-  }
-  background-image: $background-images;
   background-size: contain;
   background-repeat: no-repeat;
 }
