--- a/src/components/common/Separator.scss
+++ b/src/components/common/Separator.scss
@@ -4,6 +4,6 @@
   margin: 6rem auto 4rem auto;
   background-color: $color-font;
   height: 2px;
-  width: 90%;
+  width: 100%;
   opacity: 0.4;
 }
